test/files/neg/t12380/Test.scala
object Test extends p.J.C with p.J.I {
  def main(args: Array[String]): Unit = {
    println((this: p.J.I).m.trim)
  }
}
